...

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <androidx.appcompat.widget.SearchView
        android:id="@+id/sv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"
        android:focusedByDefault="false"
...
            android:text="@string/swipe_down_to_refresh"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
...
